--- a/mobile-media.html
+++ b/mobile-media.html
@@ -5,7 +5,7 @@
             NewRinaldi.site/Media
         </title>
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
-        <!--<script src="mobile-scripts.js"></script>-->
+        <script src="mobile-scripts.js"></script>
     </head>
     <body>
         <div id="sidenav" class="sidenav">
