Updated music pages

--- a/mobile-music.html
+++ b/mobile-music.html
@@ -36,7 +36,7 @@
         <div id="main">
             <div class="fadein">
                 <h1>
-                    You want music samples, we got music samples. Approximatley one crap ton (three) samples right here:
+                    You want music samples, we got music samples. Approximatley one crap ton (four) samples right here:
                 </h1>
             </div>
             <div class="fadein">
