--- a/music.html
+++ b/music.html
@@ -37,7 +37,7 @@
         <!--END OF HEADER-->
         <div class="fadein" style="margin-top: 75px;">
             <h1>
-                You want music samples, we got music samples. Approximatley one crap ton (three) samples right here:
+                You want music samples, we got music samples. Approximatley one crap ton (four) samples right here:
             </h1>
             <table style="width: 50%; margin-right: auto; margin-left: auto;">
                 <tr>
