Changed page titles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            NewRinaldi.site
+            NewRinaldi Home
         </title>
         <link rel="stylesheet" href="stylesheet.css"/>
         <script src="scripts.js"></script>
