--- a/media.html
+++ b/media.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            NewRinaldi.site/Media
+            NewRinaldi's brilliance on straming services
         </title>
         <link rel="stylesheet" href="stylesheet.css"/>
         <script src="scripts.js"></script>
