--- a/mobile-index.html
+++ b/mobile-index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            NewRinaldi.site
+            NewRinaldi Home (mobile)
         </title>
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
         <script src="mobile-scripts.js"></script>
