--- a/mobile-media.html
+++ b/mobile-media.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            NewRinaldi.site/Media
+            NewRinaldi's brilliance on streaming services (mobile)
         </title>
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
         <script src="mobile-scripts.js"></script>
