--- a/mobile-merch.html
+++ b/mobile-merch.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            NewRinaldi.site/Merch
+            NewRinaldi's top quality merch (V good) (Mobile)
         </title>
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
         <script src="mobile-scripts.js"></script>
