--- a/mobile-music.html
+++ b/mobile-music.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            NewRinaldi.site/Music
+            NewRinaldi's bangers n' tunes
         </title>
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
         <script src="mobile-scripts.js"></script>
