--- a/music.html
+++ b/music.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            NewRinaldi.site/Music
+            NewRinaldi's bangers n' tunes (mobile)
         </title>
         <link rel="stylesheet" href="stylesheet.css"/>
         <script src="scripts.js"></script>
