--- a/merch.html
+++ b/merch.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            NewRinaldi.site/Merch
+            NewRinaldi's top quality merch (V good)
         </title>
         <link rel="stylesheet" href="stylesheet.css"/>
         <script src="scripts.js"></script>
