--- a/merch.html
+++ b/merch.html
@@ -37,7 +37,7 @@
         <!--END OF HEADER-->
         <div class="fadein" style="margin-top: 75px; width: 50%; margin-right: auto; margin-left: auto;">
             <h1>
-                We have a significant quantity of merch of slightly above average quality
+                We have a significant ammount of merch, some is slightly above average quality
             </h1>
             <br/>
             <p>
