Moved folder location of menu button

--- a/mobile-media.html
+++ b/mobile-media.html
@@ -32,7 +32,7 @@
                 </a>
             </h2>
         </div>
-        <img src="images/Back button.png" onclick="openNav()" style="max-width: 100%; height: auto;"/>
+        <img src="images\Interactive Elements\Back button.png" onclick="openNav()" style="max-width: 100%; height: auto;"/>
         <div id="main">
             <div class="fadein">
                 <h1>
