Added gallery to desktop

--- a/merch.html
+++ b/merch.html
@@ -35,18 +35,50 @@
             </tr>
         </table>
         <!--END OF HEADER-->
-        <div class="fadein" style="margin-top: 75px; width: 50%; margin-right: auto; margin-left: auto;">
-            <h1>
-                We have a significant ammount of merch, some is slightly above average quality
-            </h1>
-            <br/>
-            <p>
-                <a href="https://newrinaldi-merch.teemill.com/" target="_blank" class="link">
-                     Click here for merch. It mostly uncomfortable and is subpar in many ways. But you should buy 
-                     it anyway cause NewRinaldi
-                </a>
-            </p>
-            <img src="images/Background Images/Logo Dark.png" class="centered"/>
+        <div class="fadein" style="margin-top: 75px; width: 100%;">
+            <div style="width: 50%; margin-right: auto; margin-left: auto;">
+                <h1>
+                    We have a significant ammount of merch, some is slightly above average quality
+                </h1>
+                <br/>
+                <p>
+                    <a href="https://newrinaldi-merch.teemill.com/" target="_blank" class="link">
+                        Click here for merch. It mostly uncomfortable and is subpar in many ways. But you should buy 
+                        it anyway cause NewRinaldi
+                    </a>
+                </p>
+            </div>
+            <table style="width: 75%; margin-right: auto; margin-left: auto;">
+                <tr colspan="5">
+                    <th>
+                        <h2>
+                            We sell tons of cloth
+                        </h2>
+                    </th>
+                </tr>
+                <tr>
+                    <table id="gallery" style="transition-property: opacity; transition-duration: 0.5s;">
+                        <tr>
+                            <td style="width: 12.5%;">
+                                <img src="images/Interactive Elements/refresh.svg" class="gallery" onclick="gallery_refresh()"/>
+                            </td>
+                            <td style="width: 20%;">
+                                <img src="images/Merch/black hoodie.webp" id="image1" class="gallery"/>
+                            </td>
+                            <td style="width: 35%;">
+                                <img src="images/Merch/black long sleeve t-shirt.webp" id="image2" class="gallery"/>
+                            </td>
+                            <td style="width: 20%;">
+                                <img src="images/Merch/Black t-shirt.webp" id="image3" class="gallery"/>
+                            </td>
+                            <td style="width: 12.5%;">
+                                <img src="images/Interactive Elements/right arrow.svg" class="gallery" onclick="gallery_move()"/>
+                            </td>
+                        </tr>
+                    </table>
+                </tr>
+            </table>
+            <img src="images/Background Images/Logo Dark.png" class="centered" style="height: 400px;"/>
             <p>
                 For any questions please contact us at:<br/>newrinaldisings@gmail.com
             </p>
