--- a/merch.html
+++ b/merch.html
@@ -60,25 +60,25 @@
                     <table id="gallery" style="transition-property: opacity; transition-duration: 0.5s;">
                         <tr>
                             <td style="width: 12.5%;">
-                                <img src="images/Interactive Elements/refresh.svg" class="gallery" onclick="gallery_refresh()"/>
+                                <img src="images/Interactive Elements/refresh.svg" style="width: 100%; height: auto;" onclick="gallery_refresh()"/>
                             </td>
                             <td style="width: 20%;">
-                                <img src="images/Merch/black hoodie.webp" id="image1" class="gallery"/>
+                                <img src="images/Merch/black hoodie.webp" style="width: 100%; height: auto;" id="image1"/>
                             </td>
                             <td style="width: 35%;">
-                                <img src="images/Merch/black long sleeve t-shirt.webp" id="image2" class="gallery"/>
+                                <img src="images/Merch/black long sleeve t-shirt.webp" style="width: 100%; height: auto;" id="image2"/>
                             </td>
                             <td style="width: 20%;">
-                                <img src="images/Merch/Black t-shirt.webp" id="image3" class="gallery"/>
+                                <img src="images/Merch/Black t-shirt.webp" style="width: 100%; height: auto;" id="image3"/>
                             </td>
                             <td style="width: 12.5%;">
-                                <img src="images/Interactive Elements/right arrow.svg" class="gallery" onclick="gallery_move()"/>
+                                <img src="images/Interactive Elements/right arrow.svg" style="width: 100%; height: auto;" onclick="gallery_move()"/>
                             </td>
                         </tr>
                     </table>
                 </tr>
             </table>
-            <img src="images/Background Images/Logo Dark.png" class="centered" style="height: 400px;"/>
+            <img src="images/Background Images/Logo Dark.png" class="centered" style="height: 400px; width: auto;"/>
             <p>
                 For any questions please contact us at:<br/>newrinaldisings@gmail.com
             </p>
