--- a/merch.html
+++ b/merch.html
@@ -48,34 +48,38 @@
                     </a>
                 </p>
             </div>
-            <table style="width: 75%; margin-right: auto; margin-left: auto;">
-                <tr colspan="5">
-                    <th>
+            <table class="gallery" style="width: 100%; margin-right: auto; margin-left: auto;">
+                <tr>
+                    <th colspan="3">
                         <h2>
                             We sell tons of cloth
                         </h2>
                     </th>
                 </tr>
                 <tr>
-                    <table id="gallery" style="transition-property: opacity; transition-duration: 0.5s;">
-                        <tr>
-                            <td style="width: 12.5%;">
-                                <img src="images/Interactive Elements/refresh.svg" style="width: 100%; height: auto;" onclick="gallery_refresh()"/>
-                            </td>
-                            <td style="width: 20%;">
-                                <img src="images/Merch/black hoodie.webp" style="width: 100%; height: auto;" id="image1"/>
-                            </td>
-                            <td style="width: 35%;">
-                                <img src="images/Merch/black long sleeve t-shirt.webp" style="width: 100%; height: auto;" id="image2"/>
-                            </td>
-                            <td style="width: 20%;">
-                                <img src="images/Merch/Black t-shirt.webp" style="width: 100%; height: auto;" id="image3"/>
-                            </td>
-                            <td style="width: 12.5%;">
-                                <img src="images/Interactive Elements/right arrow.svg" style="width: 100%; height: auto;" onclick="gallery_move()"/>
-                            </td>
-                        </tr>
-                    </table>
+                    <td style="width: 12.5%;">
+                        <img src="images/Interactive Elements/refresh.svg" style="width: 100%; height: auto;" onclick="gallery_refresh()"/>
+                    </td>
+                    <td>
+                        <table id="gallery" style="transition-property: opacity; transition-duration: 0.5s;">
+                            <div class="gallery">
+                                <tr>
+                                    <td style="width: 20%;">
+                                        <img src="images/Merch/black hoodie.webp" style="width: 100%; height: auto;" id="image1"/>
+                                    </td>
+                                    <td style="width: 35%;">
+                                        <img src="images/Merch/black long sleeve t-shirt.webp" style="width: 100%; height: auto;" id="image2"/>
+                                    </td>
+                                    <td style="width: 20%;">
+                                        <img src="images/Merch/Black t-shirt.webp" style="width: 100%; height: auto;" id="image3"/>
+                                    </td>
+                                </tr>
+                            </div>
+                        </table>
+                    </td>
+                    <td style="width: 12.5%;">
+                        <img src="images/Interactive Elements/right arrow.svg" style="width: 100%; height: auto;" onclick="gallery_move()"/>
+                    </td>
                 </tr>
             </table>
             <img src="images/Background Images/Logo Dark.png" class="centered" style="height: 400px; width: auto;"/>
