Complete desktop music integration

--- a/music.html
+++ b/music.html
@@ -8,6 +8,9 @@
         <script src="scripts.js"></script>
     </head>
     <body>
+        <audio id="audio" onended="next_track()">
+            <source src="" type="audio/mp3"/>
+        </audio>
         <!--START OF HEADER-->
         <table class="mainheader">
             <tr style="background-color: #363636;">
