--- a/media.html
+++ b/media.html
@@ -6,6 +6,9 @@
         </title>
         <link rel="stylesheet" href="stylesheet.css"/>
         <script src="scripts.js"></script>
+        <audio id="audio" onended="next_track()">
+            <source src="" type="audio/mp3"/>
+        </audio>
     </head>
     <body>
         <!--START OF HEADER-->
