--- a/mobile-merch.html
+++ b/mobile-merch.html
@@ -6,6 +6,9 @@
         </title>
         <link rel="stylesheet" href="mobile-stylesheet.css"/>
         <script src="mobile-scripts.js"></script>
+        <audio id="audio" onended="next_track()">
+            <source src="" type="audio/mp3"/>
+        </audio>
     </head>
     <body>
         <div id="sidenav" class="sidenav">
