Added fade out -> change page -> fade in links

--- a/mobile-index.html
+++ b/mobile-index.html
@@ -22,11 +22,11 @@
         <table>
             <tr style="background-color: #363636; margin-top: 50px;">
                 <th class="link">
-                    <h2>
-                        <a href="mobile-media.html" class="link">
+                    <button onclick="change_page('mobile-media.html')" type="button">
+                        <h2>
                             Media
-                        </a>
-                    </h2>
+                        </h2>
+                    </button>
                 </th>
             </tr>
             <tr>
@@ -38,11 +38,11 @@
             </tr>
             <tr style="background-color: #363636;">
                 <th class="link">
-                    <h2>
-                        <a href="mobile-music.html" class="link">
+                    <button onclick="change_page('mobile-music.html')" type="button">
+                        <h2>
                             Music
-                        </a>
-                    </h2>
+                        </h2>
+                    </button>
                 </th>
             </tr>
             <tr>
@@ -58,11 +58,11 @@
             </tr>
             <tr style="background-color: #363636; margin-top: 20px;">
                 <th class="link">
-                    <h2>
-                        <a href="mobile-merch.html" class="link">
+                    <button onclick="change_page('mobile-merch.html')" type="button">
+                        <h2>
                             Merch
-                        </a>
-                    </h2>
+                        </h2>
+                    </button>
                 </th>
             </tr>
             <tr>
