--- a/mobile-merch.html
+++ b/mobile-merch.html
@@ -13,27 +13,27 @@
     <body>
         <div id="sidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn link" style="color: #4cc530;" onclick="closeNav()">&times;</a>
-            <h2>
-                <a href="mobile-index.html" class="link" style="color: #e6d735;">
+            <button onclick="change_page('mobile-index.html')" type="button" style="width: 100%;">
+                <h2 style="color: #e6d735;">
                     Home
-                </a>
-                <br/>
-                <br/>
-                <br/>
-            </h2>
-            <h2>
-                <a href="mobile-media.html" class="link">
+                    <br/>
+                    <br/>
+                    <br/>
+                </h2>
+            </button>
+            <button onclick="change_page('mobile-media.html')" type="button" style="width: 100%;">
+                <h2>
                     Media
-                </a>
-                <br/>
-                <br/>
-                <br/>
-            </h2>
-            <h2>
-                <a href="mobile-music.html" class="link">
+                    <br/>
+                    <br/>
+                    <br/>
+                </h2>
+            </button>
+            <button onclick="change_page('mobile-music.html')" type="button" style="width: 100%;">
+                <h2>
                     Music
-                </a>
-            </h2>
+                </h2>
+            </button>
         </div>
         <img src="images/Interactive Elements/Back button.png" onclick="openNav()" style="max-width: 100%; height: auto;"/>
         <div id="main">
