--- a/mobile-media.html
+++ b/mobile-media.html
@@ -13,22 +13,22 @@
     <body>
         <div id="sidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn link" style="color: #4cc530;" onclick="closeNav()">&times;</a>
-            <h2>
-                <a href="mobile-index.html" class="link" style="color: #e6d735;">
+            <button onclick="change_page('mobile-index.html')" type="button" style="width: 100%;">
+                <h2 style="color: #e6d735;">
                     Home
-                </a>
-                <br/>
-                <br/>
-                <br/>
-            </h2>
-            <h2>
-                <a href="mobile-merch.html" class="link">
+                    <br/>
+                    <br/>
+                    <br/>
+                </h2>
+            </button>
+            <button onclick="change_page('mobile-merch.html')" type="button" style="width: 100%;">
+                <h2>
                     Merch
-                </a>
-                <br/>
-                <br/>
-                <br/>
-            </h2>
+                    <br/>
+                    <br/>
+                    <br/>
+                </h2>
+            </button>
             <h2>
                 <a href="mobile-music.html" class="link">
                     Music
