Added fade out -> change page -> fade in links to

--- a/merch.html
+++ b/merch.html
@@ -15,25 +15,25 @@
         <table class="mainheader">
             <tr style="background-color: #363636;">
                 <th class="link">
-                    <h2>
-                        <a href="media.html" class="link">
+                    <button onclick="change_page('media.html')" type="button">
+                        <h2>
                             Media
-                        </a>
-                    </h2>
+                        </h2>
+                    </button>
                 </th>
                 <th class="link">
-                    <h2>
-                        <a href="music.html" class="link">
+                    <button onclick="change_page('music.html')" type="button">
+                        <h2>
                             Music
-                        </a>
-                    </h2>
+                        </h2>
+                    </button>
                 </th>
                 <th class="link">
-                    <h2 style="color: #e6d735;">
-                        <a href="index.html" class="link">
+                    <button onclick="change_page('index.html')" type="button">
+                        <h2 style="color: #e6d736;">
                             Home
-                        </a>
-                    </h2>
+                        </h2>
+                    </button>
                 </th>
             </tr>
         </table>
@@ -44,7 +44,7 @@
                     We have a significant ammount of merch, some is slightly above average quality
                 </h1>
                 <br/>
-                <p>
+                <p style="margin-bottom: 100px;">
                     <a href="https://newrinaldi-merch.teemill.com/" target="_blank" class="link">
                         Click here for merch. It mostly uncomfortable and is subpar in many ways. But you should buy 
                         it anyway cause NewRinaldi
