--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
         <table class="mainheader">
             <tr style="background-color: #363636;">
                 <th class="link">
-                    <h2>
-                        <a href="media.html" class="link">
+                    <button onclick="change_page('media.html')" type="button">
+                        <h2>
                             Media
-                        </a>
-                    </h2>
+                        </h2>
+                    </button>
                 </th>
                 <th class="link">
-                    <h2>
-                        <a href="music.html" class="link">
+                    <button onclick="change_page('music.html')" type="button">
+                        <h2>
                             Music
-                        </a>
-                    </h2>
+                        </h2>
+                    </button>
                 </th>
                 <th class="link">
-                    <h2>
-                        <a href="merch.html" class="link">
+                    <button onclick="change_page('merch.html')" type="button">
+                        <h2>
                             Merch
-                        </a>
-                    </h2>
+                        </h2>
+                    </button>
                 </th>
             </tr>
         </table>
