--- a/music.html
+++ b/music.html
@@ -15,25 +15,25 @@
         <table class="mainheader">
             <tr style="background-color: #363636;">
                 <th class="link">
-                    <h2>
-                        <a href="media.html" class="link">
+                    <button onclick="change_page('media.html')" type="button">
+                        <h2>
                             Media
-                        </a>
-                    </h2>
+                        </h2>
+                    </button>
                 </th>
                 <th class="link">
-                    <h2 style="color: #e6d735;">
-                        <a href="index.html" class="link">
+                    <button onclick="change_page('index.html')" type="button">
+                        <h2 style="color: #e6d735;">
                             Home
-                        </a>
-                    </h2>
+                        </h2>
+                    </button>
                 </th>
                 <th class="link">
-                    <h2>
-                        <a href="merch.html" class="link">
+                    <button onclick="change_page('merch.html')" type="button">
+                        <h2>
                             Merch
-                        </a>
-                    </h2>
+                        </h2>
+                    </button>
                 </th>
             </tr>
         </table>
