--- a/mobile-media.html
+++ b/mobile-media.html
@@ -29,11 +29,11 @@
                     <br/>
                 </h2>
             </button>
-            <h2>
-                <a href="mobile-music.html" class="link">
+            <button onclick="change_page('mobile-music.html')" type="button" style="width: 100%;">
+                <h2>
                     Music
-                </a>
-            </h2>
+                </h2>
+            </button>
         </div>
         <img src="images\Interactive Elements\Back button.png" onclick="openNav()" style="max-width: 100%; height: auto;"/>
         <div id="main">
