--- a/mobile-merch.html
+++ b/mobile-merch.html
@@ -48,7 +48,7 @@
                         it anyway cause NewRinaldi
                     </a>
                 </p>
-                <table class="gallery" style="width: 100%; margin-right: auto; margin-left: auto;">
+                <table class="gallery" style="width: fit-content;">
                     <tr>
                         <th colspan="3">
                             <h2>
