Updated music pages

--- a/mobile-music.html
+++ b/mobile-music.html
@@ -47,69 +47,69 @@
                     <tr>
                         <th colspan="2">
                             <p>
-                                Alex Comp 1
+                                8-Bit Havin' a Fit
                             </p>
                         </th>
                     </tr>
                     <tr>
                         <td style="width: 50%;">
-                            <img src="images/Album Covers/Alex Comp 1 Image.png" class="rounded" style="float: right;"/>
+                            <img src="images/Album Covers/Weasel Poppers Image.jpeg" class="rounded" style="float: right;"/>
                         </td>
                         <td style="width: 50%;">
                             <audio controls controlslist="nodownload" loop>
-                                <source src="Music/Alex Comp 1.mp3" type="audio/mp3"/>
+                                <source src="Music/8-Bit havin' a fit.mp3" type="audio/mp3"/>
                             </audio>
                         </td>
                     </tr>
                     <tr>
                         <th colspan="2">
                             <p>
-                                Will R Comp 1
+                                Ready 4 Ransome Theme
                             </p>
                         </th>
                     </tr>
                     <tr>
                         <td>
                             <audio controls controlslist="nodownload" loop style="float: right;">
-                                <source src="Music/Will R Comp 1.mp3" type="audio/mp3"/>
+                                <source src="Music/R4Rtheme.mp3" type="audio/mp3"/>
                             </audio>
                         </td>
                         <td>
-                            <img src="images/Album Covers/Will R Comp 1 Image.png" class="rounded"/>
+                            <img src="images/Album Covers/R4R image.jpeg" class="rounded"/>
                         </td>
                     </tr>
                     <tr>
                         <th colspan="2">
                             <p>
-                                Alex Comp 1 V2
+                                Cold Christmas Crunker
                             </p>
                         </th>
                     </tr>
                     <tr>
                         <td>
-                            <img src="images/Album Covers/Alex Comp 1 V2 Image.png" class="rounded" style="float: right;"/>
+                            <img src="images/Album Covers/Christmas Crunker.jpg" class="rounded" style="float: right;"/>
                         </td>
                         <td>
                             <audio controls controlslist="nodownload" loop>
-                                <source src="Music/Alex Comp 1 Remix (mp3).mp3" type="audio/mp3"/>
+                                <source src="Music/ChristmasPresent.mp3" type="audio/mp3"/>
                             </audio>
                         </td>
                     </tr>
                     <tr>
                         <td colspan="2">
                             <p>
-                                Will R Comp 1 V2
+                                Twitching Around
                             </p>
                         </td>
                     </tr> 
                     <tr>
                         <td>
                             <audio controls controlslist="nodownload" loop style="float: right;">
-                                <source src="Music/Will-R-Comp-1-Remix-1.MP3" type="audio/mp3"/>
+                                <source src="Music/Jumping Around.mp3" type="audio/mp3"/>
                             </audio>
                         </td>
                         <td>
-                            <img src="images/Album Covers/Will R Comp 1 V2 Image.png" class="rounded"/>
+                            <img src="images/Album Covers/Weasel Poppers Image.jpeg" class="rounded"/>
                         </td>
                     </tr>
                 </table>
