--- a/media.html
+++ b/media.html
@@ -70,12 +70,20 @@
                 </p>
                 <iframe title="NewRinaldi on Amazon Music" loading="lazy" src='https://music.amazon.co.uk/embed/B0BKX1XHTJ/?id=rz1u2YcBjF&marketplaceId=A1F83G8C2ARO7P&musicTerritory=GB' style="border: none; width: 75%; margin-left: auto; margin-right: auto; display: block; background-color: #363636; border-radius: 10px; margin-bottom: 25vh; height: 500px; padding: 7px;"></iframe>
             </div>
-            <p>
-                For any questions please contact us at:<br/>newrinaldisings@gmail.com
-            </p>
-            <p>
-                Founded by tinbob655 and Vinyl5five
-            </p>
+            <div class="footer">
+                <p>
+                    For any questions please contact us at:<br/>newrinaldisings@gmail.com
+                </p>
+                <p>
+                    Founded by tinbob655 and Vinyl5five
+                </p>
+                Created with Will R's brain
+                <br/>Music from NewRinaldi by Alex P and Will R
+                <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk are not responcible for any injuries or death including removal of limbs due to 
+                the weraing of merch
+                <br/>All rights reserved NewRinaldi®©™.ltd.inc.org.net.co.uk
+                <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk is a credit broker not a lender
+            </div>
         </div>
     </body>
 </html>
