--- a/merch.html
+++ b/merch.html
@@ -86,12 +86,20 @@
                 </tr>
             </table>
             <img src="images/Background Images/Logo Dark.png" class="centered" style="height: 400px; width: auto;"/>
-            <p>
-                For any questions please contact us at:<br/>newrinaldisings@gmail.com
-            </p>
-            <p>
-                Founded by tinbob655 and Vinyl5five
-            </p>
+            <div class="footer">
+                <p>
+                    For any questions please contact us at:<br/>newrinaldisings@gmail.com
+                </p>
+                <p>
+                    Founded by tinbob655 and Vinyl5five
+                </p>
+                Created with Will R's brain
+                <br/>Music from NewRinaldi by Alex P and Will R
+                <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk are not responcible for any injuries or death including removal of limbs due to 
+                the weraing of merch
+                <br/>All rights reserved NewRinaldi®©™.ltd.inc.org.net.co.uk
+                <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk is a credit broker not a lender
+            </div>
         </div>
     </body>
 </html>
