--- a/mobile-music.html
+++ b/mobile-music.html
@@ -115,15 +115,23 @@
                 </table>
                 <div style="margin-top: 100px;">
                     <img src="images/Background Images/Logo Dark.png" class="centered"/>
-                    <p>
-                        For any questions please contact us at:<br/>newrinaldisings@gmail.com
-                    </p>
-                    <p>
-                        Founded by tinbob655 and Vinyl5five
-                    </p>
-                    <p>
-                        You are viewing a mobile render of NewRinaldi.site
-                    </p>
+                    <div class="footer">
+                        <p>
+                            For any questions please contact us at:<br/>newrinaldisings@gmail.com
+                        </p>
+                        <p>
+                            Founded by tinbob655 and Vinyl5five
+                        </p>
+                        <p>
+                            You are viewing a mobile render of NewRinaldi.site
+                        </p>
+                        Created with Will R's brain
+                        <br/>Music from NewRinaldi by Alex P and Will R
+                        <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk are not responcible for any injuries or death including removal of limbs due to 
+                        the weraing of merch
+                        <br/>All rights reserved NewRinaldi®©™.ltd.inc.org.net.co.uk
+                        <br/>NewRinaldi®©™.ltd.inc.org.net.co.uk is a credit broker not a lender innit
+                    </div>
                 </div>
             </div>
         </div>
