Made buttons width: 100%;

--- a/mobile-index.html
+++ b/mobile-index.html
@@ -22,7 +22,7 @@
         <table>
             <tr style="background-color: #363636; margin-top: 50px;">
                 <th class="link">
-                    <button onclick="change_page('mobile-media.html')" type="button">
+                    <button onclick="change_page('mobile-media.html')" type="button" style="width: 100%;">
                         <h2>
                             Media
                         </h2>
@@ -38,7 +38,7 @@
             </tr>
             <tr style="background-color: #363636;">
                 <th class="link">
-                    <button onclick="change_page('mobile-music.html')" type="button">
+                    <button onclick="change_page('mobile-music.html')" type="button" style="width: 100%;">
                         <h2>
                             Music
                         </h2>
@@ -58,7 +58,7 @@
             </tr>
             <tr style="background-color: #363636; margin-top: 20px;">
                 <th class="link">
-                    <button onclick="change_page('mobile-merch.html')" type="button">
+                    <button onclick="change_page('mobile-merch.html')" type="button" style="width: 100%;">
                         <h2>
                             Merch
                         </h2>
