Upgraded mobile-music

--- a/mobile-music.html
+++ b/mobile-music.html
@@ -43,7 +43,7 @@
                 </h1>
             </div>
             <div class="fadein">
-                <table style="width: 75%; margin-right: auto; margin-left: auto;">
+                <table style="width: 90%; margin-right: auto; margin-left: auto;">
                     <tr>
                         <th colspan="2">
                             <p>
@@ -53,16 +53,16 @@
                     </tr>
                     <tr>
                         <td style="width: 50%;">
-                            <img src="images/Album Covers/Weasel Poppers Image.jpeg" class="rounded" style="float: right;"/>
+                            <img src="images/Album Covers/Weasel Poppers Image.jpeg" class="rounded album-cover"/>
                         </td>
-                        <td style="width: 50%;">
+                        <td>
                             <audio controls controlslist="nodownload" loop>
                                 <source src="Music/8-Bit havin' a fit.mp3" type="audio/mp3"/>
                             </audio>
                         </td>
                     </tr>
                     <tr>
-                        <th colspan="2">
+                        <th colspan="2" class="album-title">
                             <p>
                                 Ready 4 Ransome Theme
                             </p>
@@ -70,16 +70,16 @@
                     </tr>
                     <tr>
                         <td>
-                            <audio controls controlslist="nodownload" loop style="float: right;">
+                            <audio controls controlslist="nodownload" loop>
                                 <source src="Music/R4Rtheme.mp3" type="audio/mp3"/>
                             </audio>
                         </td>
                         <td>
-                            <img src="images/Album Covers/R4R image.jpeg" class="rounded"/>
+                            <img src="images/Album Covers/R4R image.jpeg" class="rounded album-cover"/>
                         </td>
                     </tr>
                     <tr>
-                        <th colspan="2">
+                        <th colspan="2" class="album-title">
                             <p>
                                 Cold Christmas Crunker
                             </p>
@@ -87,7 +87,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <img src="images/Album Covers/Christmas Crunker.jpg" class="rounded" style="float: right;"/>
+                            <img src="images/Album Covers/Christmas Crunker.jpg" class="rounded album-cover"/>
                         </td>
                         <td>
                             <audio controls controlslist="nodownload" loop>
@@ -96,20 +96,20 @@
                         </td>
                     </tr>
                     <tr>
-                        <td colspan="2">
+                        <th colspan="2" class="album-title">
                             <p>
                                 Twitching Around
                             </p>
-                        </td>
+                        </th>
                     </tr> 
                     <tr>
                         <td>
-                            <audio controls controlslist="nodownload" loop style="float: right;">
+                            <audio controls controlslist="nodownload" loop>
                                 <source src="Music/Jumping Around.mp3" type="audio/mp3"/>
                             </audio>
                         </td>
                         <td>
-                            <img src="images/Album Covers/Weasel Poppers Image.jpeg" class="rounded"/>
+                            <img src="images/Album Covers/Weasel Poppers Image.jpeg" class="rounded album-cover"/>
                         </td>
                     </tr>
                 </table>
